# music-dynamics-literal

./: .travis.yml  README.md  music-dynamics-literal.cabal
src/Music/Dynamics/: Literal.hs
