
name:                   music-dynamics-literal
version:                1.9.2
author:                 Hans Hoglund
maintainer:             Hans Hoglund
license:                BSD3
license-file:           COPYING
synopsis:               DEPRECATED and merged into music-dynamics
category:               Music
tested-with:            GHC
build-type:             Simple
cabal-version:          >= 1.10

description:
    DEPRECATED and merged into music-dynamics

source-repository head
  type:             git
  location:         git://github.com/music-suite/music-dynamics-literal.git

library
    build-depends:      base            >= 4        && < 5,
                        semigroups      >= 0.13.0.1 && < 1
    exposed-modules:    Music.Dynamics.Literal
    hs-source-dirs:     src
    default-language:   Haskell2010
